improved java code for styling